package com.baidu.net;

/**
 * Created by jyh on 2019-08-06.
 */

public class Config {

    public final static String BASE_URL = "http://api.gykj.com.cn/server-ocr/";

}
