package com.baidu.net;

public class OkHttpEvent {

    public long dnsStartTime;
    public long dnsEndTime;

    public long responseBodySize;

    //判断有没有成功
    public boolean apiSuccess;

    public String errReson;

}
