@startuml

title __NET's Class Diagram__\n

  namespace com.baidu.net {
    class com.baidu.net.Config {
        {static} + BASE_URL : String
    }
  }
  

  namespace com.baidu.net {
    class com.baidu.net.OkHttpEvent {
        + apiSuccess : boolean
        + dnsEndTime : long
        + dnsStartTime : long
        + errReson : String
        + responseBodySize : long
    }
  }
  

  namespace com.baidu.net {
    class com.baidu.net.OkHttpEventListener {
        {static} + FACTORY : Factory
        + OkHttpEventListener()
        + callEnd()
        + callFailed()
        + callStart()
        + connectEnd()
        + connectFailed()
        + connectStart()
        + connectionAcquired()
        + connectionReleased()
        + dnsEnd()
        + dnsStart()
        + requestBodyEnd()
        + requestBodyStart()
        + requestHeadersEnd()
        + requestHeadersStart()
        + responseBodyEnd()
        + responseBodyStart()
        + responseHeadersEnd()
        + responseHeadersStart()
        + secureConnectEnd()
        + secureConnectStart()
    }
  }
  

  namespace com.baidu.net {
    class com.baidu.net.RequestUtil {
        {static} + request()
        {static} - getRequestUrl()
    }
  }
  

  namespace com.baidu.net {
    class com.baidu.net.RequestUtil.InvokeRequestHandler {
        - mNetWorkResult : NetWorkResult<R>
        - obj : Object
        + InvokeRequestHandler()
        + invoke()
    }
  }
  

  namespace com.baidu.net {
    interface com.baidu.net.RequestUtil.NetWorkResult {
        + onError()
        + onStart()
        {abstract} + onSuccess()
    }
  }
  

  namespace com.baidu.net {
    class com.baidu.net.RetrofitUtil {
        {static} - CONNECT_TIMEOUT : long
        {static} - READ_TIMEOUT : long
        {static} - WRITE_TIMEOUT : long
        {static} - gson : Gson
        {static} - mLoggingInterceptor : HttpLoggingInterceptor
        {static} - mOkHttpClient : OkHttpClient
        {static} - mRewriteCacheControlInterceptor : Interceptor
        {static} - mToken : String
        {static} + create()
        {static} - getOkHttpClient()
    }
  }
  

  com.baidu.net.OkHttpEventListener -up-|> okhttp3.EventListener
  com.baidu.net.OkHttpEventListener o-- com.baidu.net.OkHttpEvent : mOkHttpEvent
  com.baidu.net.RequestUtil +-down- com.baidu.net.RequestUtil.InvokeRequestHandler
  com.baidu.net.RequestUtil +-down- com.baidu.net.RequestUtil.NetWorkResult
  com.baidu.net.RequestUtil.InvokeRequestHandler .up.|> java.lang.reflect.InvocationHandler


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
